--- a/src/pages/secret.astro
+++ b/src/pages/secret.astro
@@ -2,30 +2,116 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-
-changeLanguage("en");
+import LetsTalk from "@components/LetsTalk.astro";
+import Link from "@components/ui/link.astro";
+changeLanguage("hu");
 ---
-
-<Layout lang="en" title="Secret">
+<Layout lang="en" title="The Secret You Need to Know for Software Selection">
 	<Container>
-		<div class="py-20 dark:bg-stone-900">
-			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold dark:text-white text-[#1F2634]">Secret</h1>
-			<p class="md:text-[40px] text-2xl font-semibold dark:text-white text-[#1F2634]">ERPNext hosting in the Cloud</p>
-			<div>
-				<img src="/images/frappecloud-banner.jpg" alt="" />
+		<div class="px-5">
+			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+				<div class="flex flex-col h-full justify-center">
+					<h1 class="text-[60px] leading-none font-semibold">Choose the Right Software!</h1>
+					<h2 class="text-xl text-[#192734] dark:text-white my-4">Independent providers can help with this. </h2>
+				<div>
+					<Link href="/hu/kapcsolat">
+						Let's talk!
+					</Link>
+				</div>
+				</div>
+				<div>
+					<img class="w-[40vw]" src="/mautic-marketing-automation-platform.jpg" alt="" />
+				</div>
 			</div>
-			<div>
-				<p class="text-lg mt-20 dark:text-white text-[#1F2634]">
-					ERPNext hosting requires expertise and specific technical conditions. After years of collaboration with various partners,
-					we have found an ERPNext provider we happily recommend. ERPNext cannot be hosted on shared hosting, and managed VPS and server
-					services usually belong to higher price categories. Therefore, we are pleased to introduce the ERPNext cloud service, where
-					monolithon.com, the popular Hungarian ERPNext promotion site, is also hosted.
-					<span class="inline-block py-10">
-						The Frappe Cloud, developed, operated, and optimized by ERPNext developers, is, in our opinion, the best ERPNext hosting
-						service, and that's why we recommend and use it:
-					</span>
-					Details and registration: <a href="https://frappecloud.com/" target="_blank" class="text-[#50A6F2]">https://frappecloud.com</a>
-				</p>
+			<div class="flex flex-col items-center">
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">What Makes Software Procurement Different?</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5">
+						<ul>
+							<li>Corporate procurement can be challenging for various reasons. For example, it can be time-consuming to find the right product and supplier, and the selected solution may be too expensive and not fit within the budget. Once these challenges are overcome, software procurement may pose additional challenges:<br><br></li>
+
+							<li>Beyond ensuring that software, like other goods, meets requirements, there are other considerations to take into account, as highlighted in the following paragraphs:<br><br></li>
+							<li>Functionality, i.e., whether the software can perform what we need.  <br><br></li>
+							<li>Ergonomics, not only should it do what we want, but we should be able to use it without expert help.  <br><br></li>
+							<li>There may be a need for customization, which not all software/providers support.  <br><br></li>
+							<li>This brings us to the issue of support, to keep it continuously maintained and ideally follow changes in the world, while keeping existing used features accessible.  <br><br></li>
+							<li>All of this should be done securely because we entrust a lot of business/personal data to it.  <br><br></li>
+							<li>Today, even if we choose an integrated system that solves the management of as many business areas as possible, due to the complexity of life, we always need external integrations, whether for compliance with regulations, convenience functions, or simply because we want to use a specific specialized software for a certain area instead of a general solution.  <br><br></li>
+							<li>For software, it is clear that legal aspects must also be taken into account, but upon closer examination, this can be true for the procurement of any service/product, as it may need to comply with different rules and regulations. However, for software, we cannot ignore this, even in lower-risk situations, as we can with other services/products.  <br><br></li>
+						</ul>
+					</p>
+				</section>
+
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">There Is No Perfect Software</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5">
+						<ul>
+							<li>Just as perfection doesn't exist in general, because it's an extremely subjective category, the same applies to software. Every usage and business is different, so the problems, processes, and focal points are also different. From this perspective, there is no perfect software.<br><br></li>
+							<li>Moreover, even if there were perfect software, there is still better software than that: "Better done than perfect" - in other words, immediately usable software.  <br><br></li>
+							<li>Perhaps there isn't even such immediately usable software, especially among more complex software. However, open-source software developed based on community needs is very close to this and provides a good foundation since it is easily customizable. The other solution is to choose an integrated system but make progress with covering individual areas rather than a complex, simultaneous implementation of everything.  <br><br></li>
+						</ul>
+					</p>
+				</section>
+
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">Open Source Software</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5">
+						<ul>
+							<li>How does open source fit into this picture?  <br><br></li>
+							<li>This topic connects with the above because in most cases, software may need to be modified. And if we're not talking about open-source software, then this can typically only be done by the organization releasing the original software, typically for a very high fee. This makes continuous maintenance, keeping up-to-date, introducing new features, or changing the supporting partner more difficult. This is what's known as Vendor Lock-In.  <br><br></li>
+							<li>In contrast, open-source software, in simplified terms, allows anyone with access to the code to make modifications, as long as this is within the license-permitted terms, although these are usually not technical but publishing or sales-related conditions.  <br><br></li>
+							<li>Independent partners typically support open-source software since they can easily work with them. They're easy to understand because the code is accessible. Furthermore, they are familiar with the specificities of the software, and they also understand the programming languages on which these software is based. This provides significant flexibility for certain software. For instance, they possess business knowledge in the field of enterprise management, from procurement to sales and accounting. Besides, many major business software applications work on Python and some SQL, making it relatively easy to navigate between similar software and functions.  <br><br></li>
+							<li>Therefore, with open-source software, you get the key for full customization, and you can enjoy this with support from any independent partner.  <br><br></li>
+							<li>It's important to note that open-source software doesn't automatically mean that the software is free. This is a separate layer, and it can be an important consideration when selecting software.  <br><br></li>
+						</ul>
+					</p>
+				</section>
+
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">Renting, Buying, or Free Software</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5">
+						<ul>
+							<li>We should start by engraving this in everyone's mind: There is no such thing as the cloud. It's actually someone else's computer. <br><br></li>
+							<li>From this, it follows that among the factors mentioned in the first paragraph, this is one of the outstanding risks. This doesn't mean that the cloud itself is bad, as we also offer many "cloud" services, but not all clouds are the same. <br><br></li>
+							<li>A typical cloud service allows you to use the software only from your browser. It's important to note that you typically pay per month per user for this, which can be attractive with few users, depending on the provider. However, as your user count increases, it can become too expensive. Switching providers is often costly, and the user may end up in a vendor lock-in situation. <br><br></li>
+							<li>Many entrepreneurs handle this by thinking that they'll have more money by then and it won't be a problem. But in reality, profitable businesses don't want to spend their profits on expensive software if there are other options. <br><br></li>
+							<li>In Hungary, certain products can be expensive even with a small number of users, especially if there's a need for many standalone, isolated products. Therefore, the choice of the cloud is important. <br><br></li>
+							<li>In our view, the ideal combination is open-source software that is free and can run in the cloud. Whether it's the cloud provided by the service, your own, or a third party, where you can access your backups at any time, or they are directly accessible to you. <br><br></li>
+							<li>This approach has a significant impact on both your wallet and security. If anything happens to the service provider, you can continue to use the software, your data is accessible, and in the worst case, you may just need to migrate your system. <br><br></li>
+						</ul>
+					</p>
+				</section>
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">Affiliated Service Providers</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5">
+						<ul>
+							<li>What impact does the choice of service provider have on the factors mentioned above?<br><br></li>
+							<li>What do affiliated and independent vendors mean?<br><br></li>
+							<li>By affiliated vendors, we mean those service providers who, on the one hand, offer high-quality support for specific software products, whether it's an ERP system, a website, or marketing software. However, their expertise is limited to only that particular software. This means that they want to sell this product to the customer at all costs, even if it's not what the customer needs. Furthermore, even if the software is not entirely suitable for solving a particular task, they try to find some solution within this software, which usually turns out not to be the best one. <br><br></li>
+							<li>Why do they do this?<br><br></li>
+							<li>Aside from the fact that Swiss army knife-style software can be versatile and that they genuinely possess high professional knowledge, it seems to them like the right solution.<br><br></li>
+							<li>But there is another factor that makes them only think about the single software they support. This often relates to the business model, licensing, and ultimately money. <br><br></li>
+							<li>Yes, it means that the vendor has a financial interest not only in the introduction and development, which is clear, but even if these are not needed, simply selling the software is profitable for them in exchange for a commission, even at a price that the customer may not use the service in the end because it's easy to refer to the customer's lack of competence due to the complexity of the software and the business. <br><br></li>
+							<li>This is less typical for those service providers who do not build their business model on commissions and/or believe in long-term customer satisfaction, but the software still limits their scope. <br><br></li>
+							<li>Another factor that narrows down the service provider and thus the users' possibilities is that they actually have no say in the future of the product. Be it in terms of features or pricing, which can even lead to unplanned price changes.<br><br></li>
+						</ul>
+					</p>
+				</section>
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">Independent Vendors</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5">
+						<ul>
+							<li>On the one hand, it is evident from the comparison that independent vendors have opposite characteristics to affiliated ones. Still, it's worth elaborating on when and what benefits they actually provide. <br><br></li>
+							<li>Naturally, an independent vendor may not understand every software, but they have a broader view of the market, so they can typically recommend software solutions they do not support themselves. <br><br></li>
+							<li>However, what characterizes independent consultants and service providers even more is that they compile their portfolios and build teams in such a way that they can offer solutions to most of their target audience's business problems, possibly using multiple software solutions and even handling their integration.  <br><br></li>
+							<li>There may be situations where technically multiple software solutions would be suitable for a partner, and the independent vendor has experience in supporting each of them. With this knowledge, they can provide the best support for the client, regardless of their own business interests (such as Cost of Ownership, Gap Analysis, or ROI). <br><br></li>
+							<li>In this field, continuous learning is necessary, and while it is true for the support of a single software, it's easier to satisfy high-level business requirements when, on the one hand, our hands are not tied, and on the other, we can incorporate new suitable technologies at any time. <br><br></li>
+							<li>We must mention that even though most affiliated service providers' contracts do not require exclusivity, they typically do not offer support for other solutions. <br><br></li>
+							<li>For affiliated service providers, obtaining their commission may involve various mandatory training, and unofficial, independent partners may not have such certifications. However, real-world results, such as references, carry much more weight. Considering the importance of learning and not questioning it, these training programs can divert significant resources from solving real problems. They may not provide real-life support to the customer. Furthermore, there are various "alternative" certifications, and their credibility can be questionable. Starting with the fact that obtaining certain badges may be just a matter of money, which the customer ultimately pays, so an independent partner can offer a more cost-effective solution.  <br><br></li>
+						</ul>
+					</p>
+				</section>
+				<LetsTalk />								
 			</div>
 		</div>
 	</Container>
