[FIX] secret pages

--- a/src/pages/secret.astro
+++ b/src/pages/secret.astro
@@ -4,7 +4,7 @@ import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
 import LetsTalk from "@components/LetsTalk.astro";
 import Link from "@components/ui/link.astro";
-changeLanguage("hu");
+changeLanguage("en");
 ---
 <Layout lang="en" title="The Secret You Need to Know for Software Selection">
 	<Container>
@@ -14,7 +14,7 @@ changeLanguage("hu");
 					<h1 class="text-[60px] leading-none font-semibold">Choose the Right Software!</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Independent providers can help with this. </h2>
 				<div>
-					<Link href="/hu/kapcsolat">
+					<Link href="/contact">
 						Let's talk!
 					</Link>
 				</div>
