--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -36,6 +36,7 @@ export const menuitems = [
 		children:[
 			{ title: "n8n", path: "path_header.n8n" },
 			{ title: "Mautic", path: "path_header.mautic" },
+			{ title: "Frappe Framework", path: "path_header.frappe" },
 	]
 	},
 ];
