--- a/src/pages/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/vuestorefront-headless-ecommerce.astro
@@ -16,7 +16,7 @@ changeLanguage("en");
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">For Speed and Independence.</h2>
 					<div>
 						<Link href="/contact">
-							Beszéljünk!
+							Let's talk!
 						</Link>
 					</div>
 				</div>
