--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -49,7 +49,7 @@ const pricingData = [
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
         <div class="flex flex-col h-full justify-center">
           <h1 class="text-[60px] leading-none font-semibold">Ügyfélhívó, sorszámosztó kiosk renszer.</h1>
-          <h2 class="text-xl text-[#192734] dark:text-white my-4">Hostelek és hotelek részére.</h2>
+          <h2 class="text-xl text-[#192734] dark:text-white my-4">Hotelek és hostelek részére.</h2>
           <a href="#pricing">
             <Button class="md:px-3 md:py-2 leading-6" style="primary">Csomagok</Button>
           </a>
