--- a/src/pages/queue-management-system.astro
+++ b/src/pages/queue-management-system.astro
@@ -48,7 +48,7 @@ const pricingData = [
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
         <div class="flex flex-col h-full justify-center">
           <h1 class="text-[60px] leading-none font-semibold">Customer Call, Queue Management Kiosk System.</h1>
-          <h2 class="text-xl text-[#192734] dark:text-white my-4">For Hostels and Hotels.</h2>
+          <h2 class="text-xl text-[#192734] dark:text-white my-4">For Hotels and Hostels.</h2>
           <a href="#pricing">
             <Button class="md:px-3 md:py-2 leading-6" style="primary">Plans</Button>
           </a>
