--- a/src/pages/hu/static-site-generator.astro
+++ b/src/pages/hu/static-site-generator.astro
@@ -61,7 +61,7 @@ changeLanguage("hu");
 				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Nuxt.js</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
-							A Nuxt.js-t csak azért szeretjük megemlíteni, mert ugyan rendelkezik a fenti szuper tulajdonságokkal, azonban annak ellenére, hogy önnálló oldalhoz nem használjuk, azoknak, akik nem csak weboldalt szerentének, legyen az statikus oldal, vagy Jamstack alapú, hanem értékesíteni is szeretnének és ehhez is villámgyorsa rendszert használnának, akkor a Headless <a href="/hu/vuestorefront-headless-ecommerce/" style="text-decoration: underline;">VueStoreFront webáruház</a> rendszerét ajánljuk, ami egy gyors ecoommerce megoldás többek között a Nuxt.js-nek köszönhetően. 
+							A Nuxt.js-t csak azért szeretjük megemlíteni, mert ugyan rendelkezik a fenti szuper tulajdonságokkal, azonban annak ellenére, hogy önnálló oldalhoz nem használjuk, azoknak, akik nem csak weboldalt szerentének, legyen az statikus oldal, vagy Jamstack alapú, hanem értékesíteni is szeretnének és ehhez is villámgyors rendszert használnának, akkor a Headless <a href="/hu/vuestorefront-headless-ecommerce/" style="text-decoration: underline;">VueStoreFront webáruház</a> rendszerét ajánljuk, ami egy gyors ecoommerce megoldás többek között a Nuxt.js-nek köszönhetően. 
 					</p>
 				</section>
 				<section id="contact-form-2">
