[FIX] legal page

--- a/src/pages/hu/jogok.astro
+++ b/src/pages/hu/jogok.astro
@@ -15,20 +15,20 @@ changeLanguage("hu");
 				<p class="mb-6">A monolithon.com weboldal látogatóinak magánélete az egyik legfontosabb prioritásunk.</p>
 	
 				<h2 class="text-2xl font-bold mb-4" class="text-2xl font-bold mb-4">Általános Adatvédelmi Rendelet (GDPR)</h2>
-				<p class="mb-6">Az Ön információinak adatkezelője a Gede Tibor.</p>
+				<p class="mb-6">Az Ön információinak adatkezelője a Molnár Margit Rita.</p>
 	
 				<p class="mb-6">
-					A Gede Tibor adatkezelésének jogalapja az ezen Adatvédelmi irányelvekben leírt személyes információk gyűjtésére és felhasználására a gyűjtött személyes információk és a gyűjtés kontextusa szerint változik:
+					A Molnár Margit Rita adatkezelésének jogalapja az ezen Adatvédelmi irányelvekben leírt személyes információk gyűjtésére és felhasználására a gyűjtött személyes információk és a gyűjtés kontextusa szerint változik:
 				</p>
 				<ul class="list-disc list-inside mb-6">
-					<li>A Gede Tibornak teljesítenie kell Önnel kötött szerződést</li>
-					<li>Ön hozzájárult a Gede Tiborhoz</li>
-					<li>A személyes információinak feldolgozása a Gede Tibor jogos érdekeihez kapcsolódik</li>
-					<li>A Gede Tibornak meg kell felelnie a törvénynek</li>
+					<li>A Molnár Margit Ritanak teljesítenie kell Önnel kötött szerződést</li>
+					<li>Ön hozzájárult a Molnár Margit Ritahoz</li>
+					<li>A személyes információinak feldolgozása a Molnár Margit Rita jogos érdekeihez kapcsolódik</li>
+					<li>A Molnár Margit Ritanak meg kell felelnie a törvénynek</li>
 				</ul>
 	
 				<p class="mb-6">
-					A Gede Tibor csak annyi ideig tárolja személyes információit, amennyire az szükséges az ezen Adatvédelmi irányelvekben meghatározott célok teljesítéséhez. Az információkat megőrizzük és használjuk azáltal, hogy teljesítjük a törvényi kötelezettségeinket, megoldjuk vitáinkat és betartjuk irányelveinket.
+					A Molnár Margit Rita csak annyi ideig tárolja személyes információit, amennyire az szükséges az ezen Adatvédelmi irányelvekben meghatározott célok teljesítéséhez. Az információkat megőrizzük és használjuk azáltal, hogy teljesítjük a törvényi kötelezettségeinket, megoldjuk vitáinkat és betartjuk irányelveinket.
 				</p>
 	
 				<p class="mb-6">
@@ -163,12 +163,12 @@ changeLanguage("hu");
 	
 			<h2 class="text-2xl font-bold mb-4">Kapcsolat</h2>
 	
-			<p>Gede Tibor</p>
+			<p>Molnár Margit Rita</p>
 			<p>Kelemen B. u. 2.</p>
 			<p>Székesfehérvár</p>
 			<p>8000</p>
 			<p>Magyarország</p>
-			<p>Adószám: 42985550-1-27</p>
+			<p>Adószám: 76953666-1-27</p>
 			<p><a href="https://www.monolithon.com/hu/kapcsolat">Vegye fel velünk a kapcsolatot</a></p>
 		</div>
 	</Container>
