--- a/src/pages/legal.astro
+++ b/src/pages/legal.astro
@@ -18,18 +18,18 @@ changeLanguage("en");
 				<p class="mb-6">We are a Data Controller of your information.</p>
 	
 				<p class="mb-6">
-					Gede Tibor legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal
+					Molnár Margit Rita legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal
 					Information we collect and the specific context in which we collect the information:
 				</p>
 				<ul class="list-disc list-inside mb-6">
-					<li>Gede Tibor needs to perform a contract with you</li>
-					<li>You have given Gede Tibor permission to do so</li>
-					<li>Processing your personal information is in Gede Tibor legitimate interests</li>
-					<li>Gede Tibor needs to comply with the law</li>
+					<li>Molnár Margit Rita needs to perform a contract with you</li>
+					<li>You have given Molnár Margit Rita permission to do so</li>
+					<li>Processing your personal information is in Molnár Margit Rita legitimate interests</li>
+					<li>Molnár Margit Rita needs to comply with the law</li>
 				</ul>
 	
 				<p class="mb-6">
-					Gede Tibor will retain your personal information only for as long as is necessary for the purposes set out in this Privacy Policy. We
+					Molnár Margit Rita will retain your personal information only for as long as is necessary for the purposes set out in this Privacy Policy. We
 					will retain and use your information to the extent necessary to comply with our legal obligations, resolve disputes, and enforce our
 					policies.
 				</p>
@@ -186,12 +186,12 @@ changeLanguage("en");
 	
 			<h2 class="text-2xl font-bold mb-4">Contact</h2>
 	
-			<p>Gede Tibor</p>
+			<p>Molnár Margit Rita</p>
 			<p>Kelemen B. u. 2.</p>
 			<p>Szekesfehervar</p>
 			<p>8000</p>
 			<p>Hungary</p>
-			<p>TAX ID: 42985550-1-27</p>
+			<p>TAX ID: 76953666-1-27</p>
 			<p><a href="https://www.monolithon.com/contact">Contact us</a></p>
 		</div>
 	</Container>
