[FIX] contact page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -144,7 +144,7 @@ changeLanguage("en");
 				<div class="md:flex">
 					<div>
 						<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Monlithon Support:</h2>
-						<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Tibor Gede - SPOC</br>
+						<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Tibor Gede - Administrator</br>
 							Budapest</br>
 							Hungary</br>
 							+36 30 7192 418</br>
